--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
@@ -40,12 +40,12 @@
 
                 <div class="form-group">
                     <label>Name</label>
-                    <input type="text" th:field="*{product}" class="form-control" id="name" name="name" placeholder="Enter name">
+                    <input type="text" th:field="*{name}" class="form-control" id="name" name="name" placeholder="Enter name">
                 </div>
 
                 <div class="form-group">
                     <label>Description</label>
-                    <input type="password" th:field="*{description}" class="form-control" id="description" name=description" placeholder="Enter description">
+                    <input type="password" th:field="*{description}" class="form-control" id="description" name="description" placeholder="Enter description">
                 </div>
 
                 <div class="form-group">
