--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
@@ -45,12 +45,12 @@
 
                 <div class="form-group">
                     <label>Description</label>
-                    <input type="password" th:field="*{description}" class="form-control" id="description" name="description" placeholder="Enter description">
+                    <input type="text" th:field="*{description}" class="form-control" id="description" name="description" placeholder="Enter description">
                 </div>
 
                 <div class="form-group">
                     <label>Cost</label>
-                    <input type="password" th:field="*{cost}" class="form-control" id="cost" name="cost" placeholder="Enter cost">
+                    <input type="text" th:field="*{cost}" class="form-control" id="cost" name="cost" placeholder="Enter cost">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
