--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/user.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/user.html
@@ -35,7 +35,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <a class="btn btn-primary" href="user_form.html">Add User</a>
+            <a class="btn btn-primary" th:href="@{/user/new}">Add User</a>
         </div>
 
         <div class="col-12">
