lesson3 add field number property

--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
@@ -50,7 +50,7 @@
 
                 <div class="form-group">
                     <label>Cost</label>
-                    <input type="text" th:field="*{cost}" class="form-control" id="cost" name="cost" placeholder="Enter cost">
+                    <input type="number" step="any" th:field="*{cost}" class="form-control" id="cost" name="cost" placeholder="Enter cost">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
