--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/product.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/product.html
@@ -35,7 +35,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <a class="btn btn-primary" th:href="@{/product/new}">Add User</a>
+            <a class="btn btn-primary" th:href="@{/product/new}">Add Product</a>
         </div>
 
         <div class="col-12">
@@ -57,7 +57,10 @@
                     <td th:text="${product.cost}">Alex</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/product/{id}(id = ${product.id})}"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-danger" th:href="@{/product/{id}/delete(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>
+                        <form class="d-inline" th:method="delete" th:action="@{/product/{id}/delete(id = ${product.id})}">
+                            <button class="btn btn-danger" type="submit"><i class="far fa-trash-alt"></i></button>
+                        </form>
+<!--                        <a class="btn btn-danger" th:href="@{/product/{id}/delete(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>-->
                     </td>
                 </tr>
                 </tbody>
