--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/product_form.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -41,16 +41,19 @@
                 <div class="form-group">
                     <label>Name</label>
                     <input type="text" th:field="*{name}" class="form-control" id="name" name="name" placeholder="Enter name">
+                    <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
                 </div>
 
                 <div class="form-group">
                     <label>Description</label>
                     <input type="text" th:field="*{description}" class="form-control" id="description" name="description" placeholder="Enter description">
+                    <p class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
                 </div>
 
                 <div class="form-group">
                     <label>Cost</label>
                     <input type="number" step="any" th:field="*{cost}" class="form-control" id="cost" name="cost" placeholder="Enter cost">
+                    <p class="text-danger" th:if="${#fields.hasErrors('cost')}" th:errors="*{cost}"/>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
