--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/user.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/user.html
@@ -53,7 +53,11 @@
                     <td th:text="${user.username}">Alex</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/user/{id}(id = ${user.id})}"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-danger" th:href="@{/user/{id}/delete(id = ${user.id})}"><i class="far fa-trash-alt"></i></a>
+<!--                        форма для удлания записи. отправляет запрос типа post-->
+                        <form class="d-inline" th:method="delete" th:action="@{/user/{id}(id = ${user.id})}">
+                            <button class="btn btn-danger" type="submit"><i class="far fa-trash-alt"></i></button>
+                        </form>
+<!--                        <a class="btn btn-danger" th:href="@{/user/{id}/delete(id = ${user.id})}"><i class="far fa-trash-alt"></i></a>-->
                     </td>
                 </tr>
                 </tbody>
