--- a/lesson3-springMVC/src/main/webapp/WEB-INF/views/user_form.html
+++ b/lesson3-springMVC/src/main/webapp/WEB-INF/views/user_form.html
@@ -41,11 +41,26 @@
                 <div class="form-group">
                     <label>Имя пользователя</label>
                     <input type="text" th:field="*{username}" class="form-control" id="name" name="username" placeholder="Enter username">
+                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"/>
+                </div>
+
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" th:field="*{email}" class="form-control" id="email" name="email" placeholder="Enter email">
+                    <p class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"/>
                 </div>
 
                 <div class="form-group">
                     <label>Пароль</label>
                     <input type="password" th:field="*{password}" class="form-control" id="password" name="password" placeholder="Enter password">
+                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/>
+                </div>
+
+                <div class="form-group">
+                    <label>Подтвердите пароль</label>
+                    <input type="password" th:field="*{matchingPassword}" class="form-control" id="matchingPassword" name="matchingPassword"
+                           placeholder="Enter matching password">
+                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
