--- a/lesson4-spring-boot/src/main/resources/templates/fragments/navigationbar.html
+++ b/lesson4-spring-boot/src/main/resources/templates/fragments/navigationbar.html
@@ -14,7 +14,7 @@
 </head>
 
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" th:href="@{}">EShop</a>
+    <a class="navbar-brand" th:href="@{/}">Main Page</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
