--- a/lesson4-spring-boot/src/main/resources/templates/product.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product.html
@@ -24,13 +24,13 @@
                 </div>
 
                 <div class="form-group mb-2 mr-2">
-                    <label for="costMinFilter" class="sr-only">Age min</label>
+                    <label for="costMinFilter" class="sr-only">Cost min</label>
                     <input type="number" class="form-control" id="costMinFilter" th:value="${param.costMinFilter}"
                            name="costMinFilter" placeholder="Cost min filter">
                 </div>
 
                 <div class="form-group mb-2 mr-2">
-                    <label for="costMaxFilter" class="sr-only">Age max</label>
+                    <label for="costMaxFilter" class="sr-only">Cost max</label>
                     <input type="number" class="form-control" id="costMaxFilter" th:value="${param.costMaxFilter}"
                            name="costMaxFilter" placeholder="Cost max filter">
                 </div>
@@ -64,8 +64,33 @@
                         <!--                        <a class="btn btn-danger" th:href="@{/product/{id}/delete(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>-->
                     </td>
                 </tr>
+                <tr th:unless="${product.hasContent()}">
+                    <td colspan="4">No data</td>
+                </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="col-12">
+            <nav aria-label="...">
+                <ul class="pagination">
+                    <li  th:classappend="${product.number eq 0} ? 'disabled'">
+                        <a th:if="${not (product.number eq 0)}" th:href="@{/product(page=${product.number},size=${product.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost})}" class="page-link">Previous</a>
+<!--                        <a th:if="${product.number != 1}" href="javascript:void(0);" class="page-link">Previous</a>-->
+                    </li>
+                    <li th:each="num: ${#numbers.sequence(1, product.totalPages)}"
+                        th:classappend="${num == product.number + 1} ? 'active'"
+                        class="page-item">
+                        <a th:text="${num}"
+                           th:href="@{/product(page=${num}, size=${product.size},
+                           productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost})}"
+                           class="page-link">1 <span th:if="${num == product.number + 1}" class="sr-only">(current)</span></a>
+                    </li>
+                    <li  th:classappend="${product.number eq product.totalPages} ? 'disabled' : ''">
+                        <a th:if="${not (product.number+1 eq product.totalPages)}" th:href="@{/product(page=${(product.number+2)},size=${product.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost})}" class="page-link">Next</a>
+<!--                        <a th:if="${product.number == product.totalPages}" href="javascript:void(0);" class="page-link">Next</a>-->
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
