--- a/lesson4-spring-boot/src/main/resources/templates/user.html
+++ b/lesson4-spring-boot/src/main/resources/templates/user.html
@@ -33,15 +33,23 @@
             <table class="table table-bordered my-2">
                 <thead>
                 <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Пользователь</th>
-                    <th scope="col">Дейтсвия</th>
+                    <th scope="col">Id
+                        <a href="#"><i class="fa fa-sort-down"></i></a>
+                    </th>
+                    <th scope="col">Username
+                        <a href="#"><i class="fa fa-sort-down"></i></a>
+                    </th>
+                    <th scope="col">Age
+                        <a href="#"><i class="fa fa-sort-down"></i></a>
+                    </th>
+                    <th scope="col">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="user : ${users}" >
                     <th th:text="${user.id}" scope="row">1</th>
                     <td th:text="${user.username}">Alex</td>
+                    <td th:text="${user.age}">21</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/user/{id}(id = ${user.id})}"><i class="fas fa-edit"></i></a>
 <!--                        форма для удлания записи. отправляет запрос типа post-->
@@ -51,9 +59,36 @@
 <!--                        <a class="btn btn-danger" th:href="@{/user/{id}/delete(id = ${user.id})}"><i class="far fa-trash-alt"></i></a>-->
                     </td>
                 </tr>
+                <tr th:unless="${users.hasContent()}">
+                    <td colspan="4">No data</td>
+                </tr>
                 </tbody>
             </table>
         </div>
+        <div class="col-12">
+            <nav aria-label="...">
+                <ul class="pagination">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    </li>
+
+                    <li th:each="num: ${#numbers.sequence(1, users.totalPages)}"
+                        th:classappend="${num == users.number + 1} ? 'active'"
+                        class="page-item">
+                        <a th:text="${num}"
+                           th:href="@{/user(page=${num}, size=${users.size},
+                           usernameFilter=${param.usernameFilter}, minAge=${param.minAge}, maxAge=${param.maxAge})}"
+                           class="page-link">1 <span th:if="${num == users.number + 1}" class="sr-only">(current)</span></a>
+                    </li>
+
+                    <li class="page-item">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+
     </div>
 </div>
 
