--- a/lesson4-spring-boot/src/main/resources/templates/user_form.html
+++ b/lesson4-spring-boot/src/main/resources/templates/user_form.html
@@ -28,6 +28,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label>Возраст</label>
+                    <input type="number" step="any" th:field="*{age}" class="form-control" id="age" name="age" placeholder="Enter age">
+                    <p class="text-danger" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"/>
+                </div>
+
+                <div class="form-group">
                     <label>Пароль</label>
                     <input type="password" th:field="*{password}" class="form-control" id="password" name="password" placeholder="Enter password">
                     <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/>
