--- a/lesson4-spring-boot/src/main/resources/templates/user.html
+++ b/lesson4-spring-boot/src/main/resources/templates/user.html
@@ -18,7 +18,7 @@
 
         <div class="col-12 mt-3">
             <form class="form-inline" th:method="get">
-<!--                <div class="form-group mx-sm-3 mb-2 mr-2">-->
+                <!--                <div class="form-group mx-sm-3 mb-2 mr-2">-->
                 <div class="form-group mb-2 mr-2">
                     <label for="usernameFilter" class="sr-only">Username filter</label>
                     <input type="text" class="form-control" id="usernameFilter" th:value="${param.usernameFilter}"
@@ -46,17 +46,17 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="user : ${users}" >
+                <tr th:each="user : ${users}">
                     <th th:text="${user.id}" scope="row">1</th>
                     <td th:text="${user.username}">Alex</td>
                     <td th:text="${user.age}">21</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/user/{id}(id = ${user.id})}"><i class="fas fa-edit"></i></a>
-<!--                        форма для удлания записи. отправляет запрос типа post-->
+                        <!--                        форма для удлания записи. отправляет запрос типа post-->
                         <form class="d-inline" th:method="delete" th:action="@{/user/{id}(id = ${user.id})}">
                             <button class="btn btn-danger" type="submit"><i class="far fa-trash-alt"></i></button>
                         </form>
-<!--                        <a class="btn btn-danger" th:href="@{/user/{id}/delete(id = ${user.id})}"><i class="far fa-trash-alt"></i></a>-->
+                        <!--                        <a class="btn btn-danger" th:href="@{/user/{id}/delete(id = ${user.id})}"><i class="far fa-trash-alt"></i></a>-->
                     </td>
                 </tr>
                 <tr th:unless="${users.hasContent()}">
@@ -68,8 +68,14 @@
         <div class="col-12">
             <nav aria-label="...">
                 <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    <li th:classappend="${users.number eq 0} ? 'disabled'">
+                        <a th:if="${not (users.number eq 0)}" th:href="@{/user(page=${users.number},
+                        size=${users.size},
+                        productFilter=${param.usernameFilter},
+                        minCost=${param.minAge},
+                         maxCost=${param.maxAge})}"
+                           class="page-link">Previous</a>
+                        <!--                        <a th:if="${product.number != 1}" href="javascript:void(0);" class="page-link">Previous</a>-->
                     </li>
 
                     <li th:each="num: ${#numbers.sequence(1, users.totalPages)}"
@@ -80,9 +86,13 @@
                            usernameFilter=${param.usernameFilter}, minAge=${param.minAge}, maxAge=${param.maxAge})}"
                            class="page-link">1 <span th:if="${num == users.number + 1}" class="sr-only">(current)</span></a>
                     </li>
-
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
+                    <li th:classappend="${users.number eq users.totalPages} ? 'disabled' : ''">
+                        <a th:if="${not (users.number+1 eq users.totalPages)}" th:href="@{/user(page=${(users.number+2)},
+                        size=${users.size},
+                         productFilter=${param.usernameFilter},
+                          minCost=${param.minAge},
+                           maxCost=${param.maxAge})}" class="page-link">Next</a>
+                        <!--                        <a th:if="${product.number == product.totalPages}" href="javascript:void(0);" class="page-link">Next</a>-->
                     </li>
                 </ul>
             </nav>
