--- a/lesson4-spring-boot/src/main/resources/templates/product.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product.html
@@ -42,11 +42,19 @@
             <table class="table table-bordered my-2">
                 <thead>
                 <tr>
-
-                    <th scope="col">Id<a href="#"><i class="fa fa-sort-down" id="sortField" th:value="id"></i></a></th>
-                    <th scope="col">Товар<a href="#"><i class="fa fa-sort-down" id="sortField" th:value="id"></i></a></th>
-                    <th scope="col">Описание<a href="#"><i class="fa fa-sort-down" id="sortField" th:value="id"></i></a></th>
-                    <th scope="col">Цена<a href="#"><i class="fa fa-sort-down" id="sortField" th:value="id"></i></a></th>
+                    <th scope="col">Id
+                        <a href="#">
+                        <i class="fa fa-sort-down" th:value="id"></i></a>
+                    </th>
+                    <th scope="col">Товар
+                        <a href="#"><i class="fa fa-sort-down"  th:value="name"></i></a>
+                    </th>
+                    <th scope="col">Описание
+                        <a href="#"><i class="fa fa-sort-down"  th:value="description"></i></a>
+                    </th>
+                    <th scope="col">Цена
+                        <a href="#"><i class="fa fa-sort-down"  th:value="cost"></i></a>
+                    </th>
                     <th scope="col">Действия</th>
                 </tr>
                 </thead>
