--- a/lesson4-spring-boot/src/main/resources/templates/product.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product.html
@@ -43,17 +43,17 @@
                 <thead>
                 <tr>
                     <th scope="col">Id
-                        <a href="#">
-                        <i class="fa fa-sort-down" th:value="id"></i></a>
+                        <a th:href="@{/product(page=${(param.page)},size=${param.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${'id'})}">
+                        <i class="fa fa-sort-down"></i></a>
                     </th>
                     <th scope="col">Товар
-                        <a href="#"><i class="fa fa-sort-down"  th:value="name"></i></a>
+                        <a th:href="@{/product(page=${(param.page)},size=${param.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${'name'})}"><i class="fa fa-sort-down"></i></a>
                     </th>
                     <th scope="col">Описание
-                        <a href="#"><i class="fa fa-sort-down"  th:value="description"></i></a>
+                        <a th:href="@{/product(page=${(param.page)},size=${param.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${'description'})}"><i class="fa fa-sort-down"></i></a>
                     </th>
                     <th scope="col">Цена
-                        <a href="#"><i class="fa fa-sort-down"  th:value="cost"></i></a>
+                        <a th:href="@{/product(page=${(param.page)},size=${param.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${'cost'})}"><i class="fa fa-sort-down"></i></a>
                     </th>
                     <th scope="col">Действия</th>
                 </tr>
@@ -84,7 +84,7 @@
             <nav aria-label="...">
                 <ul class="pagination">
                     <li  th:classappend="${product.number eq 0} ? 'disabled'">
-                        <a th:if="${not (product.number eq 0)}" th:href="@{/product(page=${product.number},size=${product.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost})}" class="page-link">Previous</a>
+                        <a th:if="${not (product.number eq 0)}" th:href="@{/product(page=${product.number},size=${product.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${param.sortField})}" class="page-link">Previous</a>
 <!--                        <a th:if="${product.number != 1}" href="javascript:void(0);" class="page-link">Previous</a>-->
                     </li>
                     <li th:each="num: ${#numbers.sequence(1, product.totalPages)}"
@@ -92,11 +92,11 @@
                         class="page-item">
                         <a th:text="${num}"
                            th:href="@{/product(page=${num}, size=${product.size},
-                           productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost})}"
+                           productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${param.sortField})}"
                            class="page-link">1 <span th:if="${num == product.number + 1}" class="sr-only">(current)</span></a>
                     </li>
                     <li  th:classappend="${product.number eq product.totalPages} ? 'disabled' : ''">
-                        <a th:if="${not (product.number+1 eq product.totalPages)}" th:href="@{/product(page=${(product.number+2)},size=${product.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost})}" class="page-link">Next</a>
+                        <a th:if="${not (product.number+1 eq product.totalPages)}" th:href="@{/product(page=${(product.number+2)},size=${product.size}, productFilter=${param.productFilter}, minCost=${param.minCost}, maxCost=${param.maxCost}, sortField=${param.sortField})}" class="page-link">Next</a>
 <!--                        <a th:if="${product.number == product.totalPages}" href="javascript:void(0);" class="page-link">Next</a>-->
                     </li>
                 </ul>
