--- a/lesson4-spring-boot/src/main/resources/templates/product_form.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product_form.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <nav th:replace="fragments/NavigationBar.html :: head"/>
+    <nav th:replace="fragments/navigationbar.html :: head"/>
 </head>
 
 <body>
 
-<nav th:replace="fragments/NavigationBar.html :: navbar"/>
+<nav th:replace="fragments/navigationbar.html :: navbar"/>
 
 <div class="container">
     <div class="row py-2">
