--- a/lesson4-spring-boot/src/main/resources/templates/user.html
+++ b/lesson4-spring-boot/src/main/resources/templates/user.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <nav th:replace="fragments/NavigationBar.html :: head"/>
+    <nav th:replace="fragments/navigationbar.html :: head"/>
 </head>
 
 <body>
 
-<nav th:replace="fragments/NavigationBar.html :: navbar"/>
+<nav th:replace="fragments/navigationbar.html :: navbar"/>
 
 
 <div class="container">
@@ -72,16 +72,18 @@
                         <!--                        <a th:if="${product.number != 1}" href="javascript:void(0);" class="page-link">Previous</a>-->
                     </li>
 
-                    <li th:each="num: ${#numbers.sequence(1, users.totalPages)}"
+                    <li th:each="num: ${#numbers.sequence(1, users.totalPages)}"  th:if="${users.totalPages != 0}"
                         th:classappend="${num == users.number + 1} ? 'active'"
                         class="page-item">
-                        <a th:text="${num}"
+                        <a th:text="${num}"  th:if="${num <= users.totalPages}"
                            th:href="@{/user(page=${num}, size=${users.size},
                            usernameFilter=${param.usernameFilter}, minAge=${param.minAge}, maxAge=${param.maxAge}, sortField=${param.sortField})}"
-                           class="page-link">1 <span th:if="${num == users.number + 1}" class="sr-only">(current)</span></a>
+                           class="page-link">
+                            <span th:if="${num == users.number + 1}" class="sr-only">(current)</span>
+                        </a>
                     </li>
-                    <li th:classappend="${users.number eq users.totalPages} ? 'disabled' : ''">
-                        <a th:if="${not (users.number+1 eq users.totalPages)}" th:href="@{/user(page=${(users.number+2)},
+                    <li th:classappend="${(users.number) >= users.totalPages} ? 'disabled' : ''">
+                        <a th:if="${not (users.number >= users.totalPages - 1)}" th:href="@{/user(page=${(users.number+2)},
                         size=${users.size},
                          usernameFilter=${param.usernameFilter},
                           minAge=${param.minAge},
