--- a/lesson4-spring-boot/src/main/resources/templates/product_form.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product_form.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<nav th:replace="fragments/navigationbar.html :: navbar"/>
+<nav th:replace="fragments/navigationbar.html :: navbar ('Products')"/>
 
 <div class="container">
     <div class="row py-2">
