--- a/lesson4-spring-boot/src/main/resources/templates/index.html
+++ b/lesson4-spring-boot/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<nav th:replace="fragments/navigationbar.html :: navbar"/>
+<nav th:replace="fragments/navigationbar.html :: navbar ('none')"/>
 </body>
 
 
