--- a/lesson4-spring-boot/src/main/resources/templates/user_form.html
+++ b/lesson4-spring-boot/src/main/resources/templates/user_form.html
@@ -46,6 +46,16 @@
                     <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/>
                 </div>
 
+                <div class="form-group">
+                    <label for="roles">Roles</label>
+                    <select multiple class="form-control" id="roles" th:field="*{roles}" required>
+                        <option th:each="role : ${roles}"
+                                th:text="${role.name}"
+                                th:value="${role.id}"
+                                th:selected="${user.roles?.contains(role)}"></option>
+                    </select>
+                </div>
+
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
