--- a/lesson4-spring-boot/src/main/resources/templates/product.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <a class="btn btn-primary" th:href="@{/product/new}">Add Product</a>
+            <a class="btn btn-primary" th:href="@{/product/edit/new}">Add Product</a>
         </div>
         <div class="col-12 mt-3">
             <form class="form-inline" th:method="get">
@@ -60,7 +60,7 @@
                         <a class="btn btn-success" th:href="@{/product/{id}(id = ${product.id})}"><i
                                 class="fas fa-edit"></i></a>
                         <form class="d-inline" th:method="delete"
-                              th:action="@{/product/{id}/delete(id = ${product.id})}">
+                              th:action="@{/product/edit/{id}/delete(id = ${product.id})}">
                             <button class="btn btn-danger" type="submit"><i class="far fa-trash-alt"></i></button>
                         </form>
                         <!--                        <a class="btn btn-danger" th:href="@{/product/{id}/delete(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>-->
