--- a/lesson4-spring-boot/src/main/resources/templates/product_form.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product_form.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form th:action="@{/product/update}" th:method="post" th:object="${product}">
+            <form th:action="@{/product/edit/update}" th:method="post" th:object="${product}">
                 <input type="hidden" th:field="*{id}" id="id" name="id">
 
                 <div class="form-group">
