--- a/lesson4-spring-boot/src/main/resources/templates/reg_form.html
+++ b/lesson4-spring-boot/src/main/resources/templates/reg_form.html
@@ -13,7 +13,7 @@
 
 <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-    <form class="modal-content" th:action="@{/user/update}" th:method="post" th:object="${user}">
+    <form class="modal-content" th:action="@{/reguser}" th:method="post" th:object="${user}">
         <div class="container">
             <h1>Sign Up</h1>
             <p>Please fill in this form to create an account.</p>
